--- a/html/singleton.html
+++ b/html/singleton.html
@@ -68,7 +68,8 @@ one.</p>
 href="http://c2.com/cgi/wiki?SingletonPattern">Singleton</a> pattern
 described by the Gang of Four usually does more harm than good. While
 they stress that the pattern should be used sparingly, that message
-was often lost in translation to the <span name="instance">game industry</span>. Like any pattern,
+was often lost in translation to the <span name="instance">game industry</span>.</p>
+<p>Like any pattern,
 though, using it where it doesn&#x2019;t belong is about as helpful as
 treating a bullet wound with a splint. Since it&#x2019;s so overused, most
 of this chapter will be about <em>avoiding</em> Singletons, but first, let&#x2019;s
