--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -91,9 +91,9 @@ in <em>data</em> instead.</p>
 <p><em>Every part of the game engine will get coupled to these classes.</em> Without
     knowing better, people will write code that calls into subsystems
     that were never meant to be tied directly to the superpower classes. If your
-    renderer is organized into three nice neat layers, only one of which
+    renderer is organized into several nice neat layers, only one of which
     is intended to be used by code outside of the graphics engine, we can bet
-    that we&#x2019;ll have superpower code that pokes its way into all three.</p>
+    that we&#x2019;ll have superpower code that pokes into every one of them.</p>
 </li>
 <li>
 <p><em>When these outside systems need to change, odds are good some random
@@ -366,9 +366,9 @@ special case subclasses call out to the external systems directly.</p>
 cause problems. If your game is multi-threaded, you could read something at
 the same time that it&#x2019;s being modified. If you aren&#x2019;t careful you can end
 up with bogus data.</p>
-<p>Another nasty case is if your game is deterministic (which some online
-games are in order to keep all players in sync). If you access something
-that isn&#x2019;t in the set of controlled, deterministic game state, you can
+<p>Another nasty case is if your game state is strictly deterministic (which
+many online games are in order to keep players in sync). If you access
+something outside of the set of synchronized game state, you can
 cause incredibly painful non-determinism bugs.</p>
 </aside>
 
